--- a/TVShowWEB/Views/Home/Index.cshtml
+++ b/TVShowWEB/Views/Home/Index.cshtml
@@ -11,7 +11,8 @@
     <div class="row">
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200" alt="">
+
                 Game of Thrones
             </a>
           
@@ -19,7 +20,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"     alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"     alt="">
                 Better Call Saul
             </a>
           
@@ -27,7 +28,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 Cosmos: A Spacetime Odyssey
             </a>
            
@@ -35,7 +36,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 Fargo
             </a>
            
@@ -43,7 +44,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 House of Cards
             </a>
         
@@ -51,7 +52,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 Narcos
             </a>
           
@@ -63,7 +64,7 @@
     <div class="row">
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 Hannibal
             </a>
            
@@ -71,7 +72,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 Black Mirror
             </a>
          
@@ -79,7 +80,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 Mr. Robot
             </a>
           
@@ -87,7 +88,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 Dr. House 
             </a>
            
@@ -95,7 +96,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 Homeland 
             </a>
            
@@ -103,7 +104,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 Sons of Anarchy
             </a>
           
@@ -115,7 +116,7 @@
     <div class="row">
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 The Walking Dead
             </a>
           
@@ -123,7 +124,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 Breaking Bad
             </a>
           
@@ -131,7 +132,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 test
             </a>
             
@@ -139,7 +140,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"  alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"  alt="">
                 test
             </a>
           
@@ -147,7 +148,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 test
             </a>
            
@@ -155,7 +156,7 @@
         </div>
         <div class="col-md-2 portfolio-item">
             <a href="#">
-                <img class="img-responsive" src="https://placezombie.com/140x200"   alt="">
+                <img class="img-shadowban" src="https://placezombie.com/140x200"   alt="">
                 test
             </a>
          
@@ -202,7 +203,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                <p>Copyright &copy; Your Website 2014</p>
+                <p>Copyright &copy;TV Tracker 2016</p>
             </div>
         </div>
         <!-- /.row -->
