--- a/TVShowWEB/Views/Home/About.cshtml
+++ b/TVShowWEB/Views/Home/About.cshtml
@@ -1,8 +1,106 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>My Shows</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
-<hr />
+
+<br/>
+<script>
+    if (typeof jQuery != 'undefined') {
+
+        alert("jQuery library is loaded!");
+
+    } else {
+
+        alert("jQuery library is not found!");
+
+    }
+
+ 
+    /*dodac zmaine coloru po klilmn ieciu , dodano plil custom.js i troche pod koniec bootrtap.css*/
+
+</script>
+<div class="row">
+    <div class="col-md-2">
+        <img class="img-shadow" src="https://placezombie.com/140x200" alt="">
+    </div>
+    <div class="col-md-6">
+        <a class="textTitle">Better Call Saul</a><br />
+        <a class="textCat">47min | Crime, Drama | TV Series (2015– )</a><br />
+        <div class="TvShowTable">
+            <table id="data">
+                <tr>
+                    <td>
+                        Season
+                    </td>
+                    <td>
+                        Episode
+                    </td>
+                    <td>
+                        Title
+                    </td>
+                    <td>
+                        Air Date
+                    </td>
+                    <td>
+                        Watched?
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        1
+                    </td>
+                    <td>
+                        Switch
+                    </td>
+                    <td>
+                        15 Feb. 2016
+                    </td>
+                    <td>
+                        Row 1
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        Cobbler
+                    </td>
+                    <td>
+                        15 Feb. 2016
+                    </td>
+
+                    <td>
+                        Row 2
+                    </td>
+
+                </tr>
+                <tr>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        2
+                    </td>
+                    <td>
+                        Amalirllo
+                    </td>
+                    <td>
+                        15 Feb. 2016
+                    </td>
+                    <td>
+                        Row 3
+                    </td>
+                </tr>
+            </table>
+        </div>
+
+    </div>
+</div>
+
