--- a/TVShowWEB/Content/bootstrap.css
+++ b/TVShowWEB/Content/bootstrap.css
@@ -368,12 +368,34 @@ img {
  -webkit-box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
 -moz-box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
 box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
+   transition: opacity .25s ease-in-out;
+    border-radius: 5px;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
+
+}
+.img-shadow {  /*obrazek shadow ban*/
+  display: block;
+  height: auto;
+  max-width: 100%;
+ -webkit-box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
+-moz-box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
+box-shadow: 0px 0px 26px 6px rgba(0,0,0,0.77);
+   transition: opacity .25s ease-in-out;
+    border-radius: 5px;
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
 
 }
 .img-shadowban:hover {  /*obrazek shadow ban*/
  
  outline:2px solid #2d75df;
  opacity: 0.6; 
+ transition: opacity .25s ease-in-out;
+ border-radius: 5px;
+   
+   -moz-transition: opacity .25s ease-in-out;
+   -webkit-transition: opacity .25s ease-in-out;
    /*dioca obrazki smieszne */
 }
 .img-rounded {
@@ -6834,4 +6856,128 @@ td.visible-print {
   td.hidden-print {
     display: none !important;
   }
+}
+.textTitle{
+            font-weight: normal !important;
+            color: whitesmoke !important;
+            letter-spacing: 1pt !important;
+            word-spacing: 2pt !important;
+            font-size: 23px !important;
+            text-align: left !important;
+            font-family: verdana, sans-serif !important;
+            line-height: 1 !important;
+}
+
+.textCat{
+            font-weight: lighter !important;
+            color: whitesmoke !important;
+            letter-spacing: 1pt !important;
+            word-spacing: 2pt !important;
+            font-size: 11px !important;
+            text-align: left !important;
+            font-family: verdana, sans-serif !important;
+            line-height: 1 !important;
+}
+
+/*Tabela ---------------*/
+.TvShowTable {
+	margin:0px;padding:0px;
+	width:100%;
+	border:1px solid #17181b;
+	
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;
+	border-bottom-left-radius:4px;
+	
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;
+	border-bottom-right-radius:4px;
+	
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;
+	border-top-right-radius:4px;
+	
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;
+	border-top-left-radius:4px;
+}.TvShowTable table{
+    border-collapse: collapse;
+        border-spacing: 0;
+	width:100%;
+	height:100%;
+	margin:0px;padding:0px;
+}.TvShowTable tr:last-child td:last-child {
+	-moz-border-radius-bottomright:4px;
+	-webkit-border-bottom-right-radius:4px;
+	border-bottom-right-radius:4px;
+}
+.TvShowTable table tr:first-child td:first-child {
+	-moz-border-radius-topleft:4px;
+	-webkit-border-top-left-radius:4px;
+	border-top-left-radius:4px;
+}
+.TvShowTable table tr:first-child td:last-child {
+	-moz-border-radius-topright:4px;
+	-webkit-border-top-right-radius:4px;
+	border-top-right-radius:4px;
+}.TvShowTable tr:last-child td:first-child{
+	-moz-border-radius-bottomleft:4px;
+	-webkit-border-bottom-left-radius:4px;
+	border-bottom-left-radius:4px;
+}.TvShowTable tr:hover td{
+	
+}
+.TvShowTable tr:nth-child(odd){ background-color:#17181b; }
+.TvShowTable tr:nth-child(even)    { background-color:#212226; }.TvShowTable td{
+	vertical-align:middle;
+	
+	
+	border:1px solid #17181b;
+	border-width:0px 1px 1px 0px;
+	text-align:center;
+	padding:7px;
+	font-size:13px;
+	font-family:Arial;
+	font-weight:normal;
+	color:#ffffff;
+}.TvShowTable tr:last-child td{
+	border-width:0px 1px 0px 0px;
+}.TvShowTable tr td:last-child{
+	border-width:0px 0px 1px 0px;
+}.TvShowTable tr:last-child td:last-child{
+	border-width:0px 0px 0px 0px;
+}
+.TvShowTable tr:first-child td{
+		background:-o-linear-gradient(bottom, #17181b 5%, #000000 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #17181b), color-stop(1, #000000) );
+	background:-moz-linear-gradient( center top, #17181b 5%, #000000 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#17181b", endColorstr="#000000");	background: -o-linear-gradient(top,#17181b,000000);
+
+	background-color:#17181b;
+	border:0px solid #17181b;
+	text-align:center;
+	border-width:0px 0px 1px 1px;
+	font-size:13px;
+	font-family:Verdana;
+	font-weight:bold;
+	color:#ffffff;
+}
+.TvShowTable tr:first-child:hover td{
+	background:-o-linear-gradient(bottom, #17181b 5%, #000000 100%);	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #17181b), color-stop(1, #000000) );
+	background:-moz-linear-gradient( center top, #17181b 5%, #000000 100% );
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr="#17181b", endColorstr="#000000");	background: -o-linear-gradient(top,#17181b,000000);
+
+	background-color:#17181b;
+}
+.TvShowTable tr:first-child td:first-child{
+	border-width:0px 0px 1px 0px;
+}
+.TvShowTable tr:first-child td:last-child{
+	border-width:0px 0px 1px 1px;
+}
+.TvShowTable tr:hover {  
+    background-color: #313338;
+}
+
+tr.highlighted{
+    background: red;
 }
