--- a/TVShowWEB/Views/Shared/_Layout.cshtml
+++ b/TVShowWEB/Views/Shared/_Layout.cshtml
@@ -6,7 +6,15 @@
     <title>@ViewBag.Title -  </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-    <link href="grid.css" rel="stylesheet" type="text/css" />
+   
+    <link href="~/Content/grid.css" rel="stylesheet" type="text/css"/>
+   
+    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    
+    <script src="~/Scripts/Custom.js"></script>
+  
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
