des panel hide and show

--- a/TVShowWEB/Content/bootstrap.css
+++ b/TVShowWEB/Content/bootstrap.css
@@ -7020,6 +7020,10 @@ tr.highlighted td {
 .info {
 
     background-color: #313338;
+    border-radius: 5px;
+    -webkit-box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 16px 0px rgba(0,0,0,0.75);
 }
 .iamge-des {
    
@@ -7039,3 +7043,4 @@ box-shadow: 0px 0px 32px 0px rgba(0,0,0,0.75);
             font-family: verdana, sans-serif !important;
             line-height: 1 !important;
 }
+
