--- a/TVShowWEB/Views/Shared/_Layout.cshtml
+++ b/TVShowWEB/Views/Shared/_Layout.cshtml
@@ -3,15 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title -  </title>
+    <title>@ViewBag.Title - </title>
+
     @Styles.Render("~/Content/css")
+    @Styles.Render("~/Content/themes/base/css")
     @Scripts.Render("~/bundles/modernizr")
+   
+    @Scripts.Render("~/bundles/jquery")
+   
    
     <link href="~/Content/grid.css" rel="stylesheet" type="text/css"/>
    
-    
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    
+   
    
   
 
@@ -47,6 +50,7 @@
     </div>
 
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
 </body>
