--- a/TVShowWEB/Views/Shared/_Layout.cshtml
+++ b/TVShowWEB/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
    
    
     <link href="~/Content/grid.css" rel="stylesheet" type="text/css"/>
-   
+    <script src="https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js"></script>
    
    
   
@@ -53,5 +53,6 @@
     @Scripts.Render("~/bundles/jqueryui")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://cdn.jsdelivr.net/jquery.cloudinary/1.0.18/jquery.cloudinary.js"></script>
 </body>
 </html>
